# Backend/uasam/users/routes/user_routes.go
@@ -29,6 +29,9 @@ func UserRoutesV1(ctx *context.Context, r *gin.RouterGroup, log *logger.Logger, 
 		userService := userService.NewUserService(ctx, otpService, jwtService, userRepo, log, redis)
 		go log.Info("user service created", zap.String("execution level", "UserRoutesV1"))
 
+		userAuthenticateController := userController.NewUserAuthenticateController(log, userService)
+		go log.Info("user service created", zap.String("execution level", "UserRoutesV1"))
+
 		signUp := user.Group("sign-up/")
 		{
 			signUpController := userController.NewSignUpController(userService, log)
@@ -115,5 +118,17 @@ func UserRoutesV1(ctx *context.Context, r *gin.RouterGroup, log *logger.Logger, 
 				Endpoint:    "user/reset-password/reset",
 			}), resetPasswordController.ResetPasswordHandler)
 		}
+
+		user.POST("authenticate/", middleware.RateLimiter(redis, log, middleware.RateLimiterConfig{
+			Source:      "header",
+			Param:       "USER_TOKEN",
+			EnableParam: true,
+			Limit:       300,
+			Window:      300,
+			EnableIP:    true,
+			IPLimit:     300,
+			IPWindow:    300,
+			Endpoint:    "/v1/user/authenticate/",
+		}), userAuthenticateController.UserAuthenticateHandler)
 	}
 }
